--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -356,6 +356,7 @@ section
 {
 	margin-left: 7px;
         background-image: url(/images/logo.png);
+        background-repeat: no-repeat;
 }
 .logo a
 {
